Fix alignment in header

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -2,6 +2,7 @@
   display: flex;
   background: c('blue');
   color: c('white');
+  align-items: center;
   height: $nav-height;
   padding: $padding;
 }
