--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -1,4 +1,6 @@
 .nav {
+  margin-left: auto;
+
   &__toggler {
     display: flex;
     justify-content: center;
